# Trabalho-individual-gces

./: docker-compose.yml  dockerfile  doxyfile
.github/workflow/: ci.yml
.github/workflows/: ci.yml
doc_doxygen/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  graph_legend.html  index.html
doc_doxygen/latex/: refman.tex
source/: conf.py  index.rst
trabalho_final/: pyproject.toml
