[tool.poetry]
name = "trabalho-final"
version = "0.1.0"
description = "Trabalho individual e final"
authors = ["anacarolinarodrigues <anacarolinarodrigues480@gmail.com>"]
readme = "README.md"
packages = [{include = "trabalho_final"}]

[tool.poetry.dependencies]
python = "^3.10"
cython = "0.29.33"
gensim = "4.3.0"
numpy = "1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
